infra/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/instance: worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: blackhole
    tier: worker
    system: blackhole
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: worker
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: blackhole
        tier: worker
        system: blackhole
    spec:
      containers:
        - name: worker
          image: marilee/blackhole-k8s:worker-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
